cluster/manifests/vpa/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpa
  labels:
    name: vpa
    pod-security.kubernetes.io/enforce: restricted
